--- a/workplace/work-spring/src/main/resources/application.properties
+++ b/workplace/work-spring/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8443
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/work-samantha?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/user_web
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
